--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -1,3 +1,40 @@
-<h1>Example HTML Document with Ruby</h1>
-<p>Let's do some math</p>
-4 + 3 = <%= 4+3 %>
+<body bgcolor="#E6E6FA">
+<h1>
+  Workshop Todo List
+</h1>
+<li>
+  <input type="checkbox" name=""/>
+  <a href="show/1">Make the curriculum</a>
+  <span class="pomodoro-estimate small-pomodoro-estimate">4 Pomodoros</span>
+</li>
+<li>
+  <input type="checkbox" name=""/>
+  <a href="show/2">Buy workshop supplies</a>
+  <span class="pomodoro-estimate small-pomodoro-estimate">3 Pomodoros</span>
+</li>
+<li>
+  <input type="checkbox" name=""/>
+  <a href="show/3">Meet with volunteer trainers</a>
+  <span class="pomodoro-estimate small-pomodoro-estimate">2 Pomodoros</span>
+</li>
+<li>
+  <input type="checkbox" name=""/>
+  <a href="show/4">Order food for Saturday and Sunday</a>
+  <span class="pomodoro-estimate small-pomodoro-estimate">1 Pomodoros</span>
+</li>
+<li>
+  <input type="checkbox" name=""/>
+  <a href="show/5">Check pre-work assignments</a>
+  <span class="pomodoro-estimate small-pomodoro-estimate">2 Pomodoros</span>
+</li>
+<li>
+  <input type="checkbox" name=""/>
+  <a href="show/6">Send workshop location to all the students</a>
+  <span class="pomodoro-estimate small-pomodoro-estimate">2 Pomodoros</span>
+</li>
+<li>
+  <input type="checkbox" name=""/>
+  <a href="show/7">Have a great workshop</a>
+  <span class="pomodoro-estimate small-pomodoro-estimate">2 Pomodoros</span>
+</li>
+</body>
